runtime/pavex_macros/tests/from/fail/type_path.stderr
error: expected ident
 --> tests/from/fail/type_path.rs:6:29
  |
6 |     let _ = from![crate::A::<String>];
  |                             ^
